--- a/express/package.json
+++ b/express/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "express",
+  "name": "debugging",
   "version": "1.0.0",
-  "description": "",
+  "description": "debugging tools",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
-  "author": "",
+  "author": "adi",
   "license": "ISC",
   "dependencies": {
     "nodemon": "^2.0.4"
